为了避免前后端不一致，重构 userid 为 username
